unpackaged/main/default/objects/Booth_Upload_API_User__c/Booth_Upload_API_User__c.object-meta.xml
<CustomObject>
    <description>Booth upload API user</description>
    <label>Booth Upload API User</label>
    <nameField>
        <displayFormat>BUA-{0000}</displayFormat>
        <label>Booth Upload API User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Upload API Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>