unpackaged/main/default/objects/Booth_Upload_API_User__c/fields/Organiser__c.field-meta.xml
<CustomField>
    <fullName>Organiser__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booth Upload API Users</relationshipLabel>
    <relationshipName>Booth_Upload_API_Users</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>