unpackaged/main/default/objects/Booth_Upload_API_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User Description/Name</description>
    <label>User</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>