unpackaged/main/default/objects/Booth_Upload_API_User__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <description>Upload user email.</description>
    <label>User Email</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>