unpackaged/main/default/objects/Booth_Upload_API_User__c/fields/User_Password__c.field-meta.xml
<CustomField>
    <fullName>User_Password__c</fullName>
    <description>Booth upload API user password</description>
    <label>User Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>